--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-charts": "^3.0.0-beta.36",
