--- a/package.json
+++ b/package.json
@@ -19,17 +19,21 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-charts": "^3.0.0-beta.36",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-jwt": "^1.1.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.0.3",
     "recharts": "^2.1.11",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.28.5"
   },
   "scripts": {
     "start": "react-scripts start",
