--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
+    "react-barcode": "^1.4.1",
     "react-charts": "^3.0.0-beta.36",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
