--- a/package.json
+++ b/package.json
@@ -3,40 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "^3.0.3",
+    "@devexpress/dx-react-chart-material-ui": "^3.0.3",
+    "@devexpress/dx-react-core": "^3.0.3",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.19",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.8.6",
+    "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "material-ui-search-bar": "^1.0.0",
     "moment": "^2.29.3",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-barcode": "^1.4.1",
     "react-charts": "^3.0.0-beta.36",
     "react-cookie": "^4.1.1",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-dom": "^18.1.0",
+    "react-icons": "^4.3.1",
     "react-jwt": "^1.1.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.1",
-    "recharts": "^2.1.12",
+    "reactstrap": "^9.0.3",
+    "recharts": "^2.1.11",
     "web-vitals": "^2.1.4",
     "yup": "^0.28.5"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build GENERATE_SOURCEMAP=false ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
