--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-frontend",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -56,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.3.2"
   }
 }
