--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.2",
-    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
@@ -31,6 +30,7 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.0.3",
     "recharts": "^2.1.11",
+    "resize-observer-polyfill": "^1.5.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.28.5"
   },
@@ -60,5 +60,9 @@
   },
   "optionalDependencies": {
     "fsevents": "^2.3.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
