--- a/app.yaml
+++ b/app.yaml
@@ -1,18 +1,11 @@
-runtime: nodejs
-env: flex
-
-resources:
-  cpu: 2
-  memory_gb: 4.0
-  disk_size_gb: 10
-  volumes:
-  - name: reactdisk1
-    volume_type: tmpfs
-    size_gb: 0.5
-
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 2
+runtime: nodejs14
+instance_class: B8
+# This sample incurs costs to run on the App Engine flexible environment.
+  # The settings below are to reduce costs during testing and are not appropriate
+# for production use. For more information, see:
+# https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
+manual_scaling:
+  instances: 1
 
 service: react
 
